--- a/index.html
+++ b/index.html
@@ -4,9 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Launchpad</title>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    
+    <header class="header">
+<nav>
+    <h2 class="nav-title inter-normal">Logo</h2>
+
+    <button class="btn raleway-normal">Sign Up</button>
+   
+</nav>
+
+ <div class="banner">
+        <h1 class="banner-title raleway-normal">Cool Dark UI Template for Webflow Agencies!</h1>
+        <button class="btn raleway-normal">Stay Focused</button>
+    </div>
+
+    </header>
+    <main>
+<section class="action raleway-normal">
+    <div class="action-title">
+        <h4 class="action-heading">See It in Action</h4>
+        <p class="action-description">Explore the live preview and imagine your brand in this bold new look.</p>
+        <button class="btn raleway-normal">Launch Live Preview</button>
+    </div>
+    <div class="action-image"> <img src="Assets/wc-mini.png" alt=""></div>
+</section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
