productive user added

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
     </header>
     <main>
+        <!-- Action Section -->
 <section class="action raleway-normal">
     <div class="action-title">
         <h4 class="action-heading">See It in Action</h4>
@@ -39,9 +40,30 @@
     </div>
     <div class="action-image"> <img src="Assets/wc-mini.png" alt=""></div>
 </section>
+<!-- productive user section -->
+<section class="productive-users">
+
+    <h2 class="users-title raleway-normal">Joined Thousands of Productive Users</h2>
+<div class="productive-user-container">
+    <div class="user-details">
+    <div class="user-activity inter-normal ">50K</div>
+    <div class="user-activity-item inter-normal">Active Users</div>
+</div>
+<div class="user-details">
+    <div class="user-activity inter-normal">2M+</div>
+    <div class="user-activity-item inter-normal">Focus Sessions</div>
+</div>
+<div class="user-details">
+    <div class="user-activity inter-normal">95%</div>
+    <div class="user-activity-item inter-normal">Satisfaction Rate</div>
+</div>
+</div>
+
+</section>
     </main>
     <footer>
 
     </footer>
 </body>
 </html>
+
