review section added

--- a/index.html
+++ b/index.html
@@ -1,69 +1,150 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Launchpad</title>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 
 
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 
     <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
     <header class="header">
-<nav>
-    <h2 class="nav-title inter-normal">Logo</h2>
+        <nav>
+            <h2 class="nav-title inter-normal">Logo</h2>
 
-    <button class="btn raleway-normal">Sign Up</button>
-   
-</nav>
+            <button class="btn raleway-normal">Sign Up</button>
 
- <div class="banner">
-        <h1 class="banner-title raleway-normal">Cool Dark UI Template for Webflow Agencies!</h1>
-        <button class="btn raleway-normal">Stay Focused</button>
-    </div>
+        </nav>
+
+        <div class="banner">
+            <h1 class="banner-title raleway-normal">Cool Dark UI Template for Webflow Agencies!</h1>
+            <button class="btn raleway-normal">Stay Focused</button>
+        </div>
 
     </header>
     <main>
         <!-- Action Section -->
-<section class="action raleway-normal">
-    <div class="action-title">
-        <h4 class="action-heading">See It in Action</h4>
-        <p class="action-description">Explore the live preview and imagine your brand in this bold new look.</p>
-        <button class="btn raleway-normal">Launch Live Preview</button>
-    </div>
-    <div class="action-image"> <img src="Assets/wc-mini.png" alt=""></div>
-</section>
-<!-- productive user section -->
-<section class="productive-users">
+        <section class="action raleway-normal">
+            <div class="action-title">
+                <h4 class="action-heading">See It in Action</h4>
+                <p class="action-description">Explore the live preview and imagine your brand in this bold new look.</p>
+                <button class="btn raleway-normal">Launch Live Preview</button>
+            </div>
+            <div class="action-image"> <img src="Assets/wc-mini.png" alt=""></div>
+        </section>
+        <!-- productive user section -->
+        <section class="productive-users">
 
-    <h2 class="users-title raleway-normal">Joined Thousands of Productive Users</h2>
-<div class="productive-user-container">
-    <div class="user-details">
-    <div class="user-activity inter-normal ">50K</div>
-    <div class="user-activity-item inter-normal">Active Users</div>
-</div>
-<div class="user-details">
-    <div class="user-activity inter-normal">2M+</div>
-    <div class="user-activity-item inter-normal">Focus Sessions</div>
-</div>
-<div class="user-details">
-    <div class="user-activity inter-normal">95%</div>
-    <div class="user-activity-item inter-normal">Satisfaction Rate</div>
-</div>
-</div>
+            <h2 class="users-title raleway-normal">Joined Thousands of Productive Users</h2>
+            <div class="productive-user-container">
+                <div class="user-details">
+                    <div class="user-activity inter-normal ">50K</div>
+                    <div class="user-activity-item inter-normal">Active Users</div>
+                </div>
+                <div class="user-details">
+                    <div class="user-activity inter-normal">2M+</div>
+                    <div class="user-activity-item inter-normal">Focus Sessions</div>
+                </div>
+                <div class="user-details">
+                    <div class="user-activity inter-normal">95%</div>
+                    <div class="user-activity-item inter-normal">Satisfaction Rate</div>
+                </div>
+            </div>
 
-</section>
+        </section>
+
+        <!-- review section -->
+        <section class="reviews-section">
+            <h2 class="review-heading raleway-normal">What our users say</h2>
+            <div class="reviews">
+
+
+                <div class="review">
+                    <div class="review-star"> <img src="/Assets/icon-star.png" alt="">
+                        <img src="/Assets/icon-star.png" alt="">
+                        <img src="/Assets/icon-star.png" alt="">
+                        <img src="/Assets/icon-star.png" alt="">
+                        <img src="/Assets/icon-star.png" alt="">
+                    </div>
+                    <h4 class="review-title inter-normal">Loved by Designers</h4>
+                    <p class="review-description inter-normal">This template instantly leveled up our presence.” –
+                        Studio Vertex
+                    </p>
+
+                    <div class="reviewer">
+                        <img src="/Assets/avatar.png" alt="" class="reviewer-photo">
+                        <div class="reviewer-date">
+                            <h6 class="reviewer-name inter-normal">Samantha</h6>
+                            <span class="reviews-date inter-normal">20-02-23</span>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="review">
+                    <div class="review-star"> <img src="/Assets/icon-star.png" alt="">
+                        <img src="/Assets/icon-star.png" alt="">
+                        <img src="/Assets/icon-star.png" alt="">
+                        <img src="/Assets/icon-star.png" alt="">
+                        <img src="/Assets/icon-star.png" alt="">
+                    </div>
+                    <h4 class="review-title inter-normal">Loved by Designers</h4>
+                    <p class="review-description inter-normal">This template instantly leveled up our presence.” –
+                        Studio Vertex
+                    </p>
+
+                    <div class="reviewer">
+                        <img src="/Assets/avatar.png" alt="" class="reviewer-photo">
+                        <div class="reviewer-date">
+                            <h6 class="reviewer-name inter-normal">Samantha</h6>
+                            <span class="reviews-date inter-normal">20-02-23</span>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="review">
+                    <div class="review-star"> <img src="/Assets/icon-star.png" alt="">
+                        <img src="/Assets/icon-star.png" alt="">
+                        <img src="/Assets/icon-star.png" alt="">
+                        <img src="/Assets/icon-star.png" alt="">
+                        <img src="/Assets/icon-star.png" alt="">
+                    </div>
+                    <h4 class="review-title inter-normal">Loved by Designers</h4>
+                    <p class="review-description inter-normal">This template instantly leveled up our presence.” –
+                        Studio Vertex
+                    </p>
+
+                    <div class="reviewer">
+                        <img src="/Assets/avatar.png" alt="" class="reviewer-photo">
+                        <div class="reviewer-date">
+                            <h6 class="reviewer-name inter-normal">Samantha</h6>
+                            <span class="reviews-date inter-normal">20-02-23</span>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+
+        </section>
     </main>
     <footer>
 
     </footer>
 </body>
-</html>
 
+</html>
