--- a/index.html
+++ b/index.html
@@ -141,6 +141,19 @@
             </div>
 
         </section>
+        <!-- focus better section -->
+        <section class="focus-better-section">
+            <div class="focus-better">
+                <h2 class="focus-better-title raleway-normal">Ready to focus better</h2>
+                <p class="focus-better-short-text inter-normal">This template instantly leveled up our presence.” – Studio Vertex</p>
+                <button class="btn get-stated-button">Get Started Free</button>
+                <div class="focus-image">
+                    <img src="/Assets/wc-big.png" alt="" class="focus-better-image">
+                </div>
+                
+            </div>
+
+        </section>
     </main>
     <footer>
 
